frame/support/test/tests/pallet_ui/genesis_wrong_name.stderr
error: Invalid pallet::genesis_build, expect impl<..> GenesisBuild<..> for GenesisConfig<..>
  --> $DIR/genesis_wrong_name.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
